@@ -1,5 +1,11 @@
 package com.dotcms.content.elasticsearch.business;
 
+import static com.dotcms.exception.ExceptionUtil.bubbleUpException;
+import static com.dotcms.exception.ExceptionUtil.getLocalizedMessageOrDefault;
+import static com.dotmarketing.business.PermissionAPI.PERMISSION_CAN_ADD_CHILDREN;
+import static com.dotmarketing.portlets.contentlet.model.Contentlet.URL_MAP_FOR_CONTENT_KEY;
+import static com.dotmarketing.portlets.personas.business.PersonaAPI.DEFAULT_PERSONA_NAME_KEY;
+
 import com.dotcms.api.system.event.ContentletSystemEventUtil;
 import com.dotcms.api.web.HttpServletRequestThreadLocal;
 import com.dotcms.business.CloseDBIfOpened;
@@ -667,14 +673,14 @@ public class ESContentletAPIImpl implements ContentletAPI {
                             .getContentletVersionInfo(identifier, tryLanguage);
 
             // try the fallback if does not exists
-            if (tryLanguage != defaultLanguageId && (!contentletVersionInfo.isPresent()
+            if (tryLanguage != defaultLanguageId && (contentletVersionInfo.isEmpty()
                     || (live && contentletVersionInfo.get().getLiveInode() == null))) {
                 fallback = true;  // using the fallback
                 contentletVersionInfo = APILocator.getVersionableAPI()
                         .getContentletVersionInfo(identifier, defaultLanguageId);
             }
 
-            if (!contentletVersionInfo.isPresent()) {
+            if (contentletVersionInfo.isEmpty()) {
                 return Optional.empty();
             }
 
@@ -1189,8 +1195,8 @@ public class ESContentletAPIImpl implements ContentletAPI {
     public List<Contentlet> search(String luceneQuery, int limit, int offset, String sortBy,
             User user, boolean respectFrontendRoles, int requiredPermission)
             throws DotDataException, DotSecurityException {
-        PaginatedArrayList<Contentlet> contents = new PaginatedArrayList<Contentlet>();
-        ArrayList<String> inodes = new ArrayList<String>();
+        PaginatedArrayList<Contentlet> contents = new PaginatedArrayList<>();
+        ArrayList<String> inodes = new ArrayList<>();
 
         PaginatedArrayList<ContentletSearch> list = (PaginatedArrayList) searchIndex(luceneQuery,
                 limit, offset, sortBy, user, respectFrontendRoles);
@@ -1201,7 +1207,7 @@ public class ESContentletAPIImpl implements ContentletAPI {
         }
 
         List<Contentlet> contentlets = findContentlets(inodes);
-        Map<String, Contentlet> map = new HashMap<String, Contentlet>(contentlets.size());
+        Map<String, Contentlet> map = new HashMap<>(contentlets.size());
         for (Contentlet contentlet : contentlets) {
             map.put(contentlet.getInode(), contentlet);
         }
@@ -1346,7 +1352,7 @@ public class ESContentletAPIImpl implements ContentletAPI {
             String sortBy, User user, boolean respectFrontendRoles)
             throws DotSecurityException, DotDataException {
         boolean isAdmin = false;
-        List<Role> roles = new ArrayList<Role>();
+        List<Role> roles = new ArrayList<>();
         if (user == null && !respectFrontendRoles) {
             throw new DotSecurityException(
                     "You must specify a user if you are not respecting frontend roles");
@@ -1567,7 +1573,7 @@ public class ESContentletAPIImpl implements ContentletAPI {
             final User user, final boolean respectFrontendRoles)
             throws DotSecurityException, DotDataException, DotContentletStateException {
 
-        final List<Map<String, Object>> results = new ArrayList<Map<String, Object>>();
+        final List<Map<String, Object>> results = new ArrayList<>();
         if (contentlet == null || !InodeUtils.isSet(contentlet.getInode())) {
             throw new DotContentletStateException("Contentlet must exist");
         }
@@ -2608,7 +2614,7 @@ public class ESContentletAPIImpl implements ContentletAPI {
 
             final Optional<Boolean> deleteOpt = this.checkAndRunDestroyAsWorkflow(contentlet, user,
                     respectFrontendRoles);
-            if (!deleteOpt.isPresent()) {
+            if (deleteOpt.isEmpty()) {
 
                 contentletsToDelete.add(contentlet);
             } else {
@@ -2797,7 +2803,6 @@ public class ESContentletAPIImpl implements ContentletAPI {
 
         this.deleteBinaryFiles(contentletsVersion, null);
         this.deleteElementFromPublishQueueTable(contentlets);
-        this.destroyMetadata(contentlets);
 
         return noErrors;
     }
@@ -3164,7 +3169,7 @@ public class ESContentletAPIImpl implements ContentletAPI {
         }
         List<Contentlet> perCons = permissionAPI.filterCollection(contentlets,
                 PermissionAPI.PERMISSION_PUBLISH, respectFrontendRoles, user);
-        List<Contentlet> contentletsVersion = new ArrayList<Contentlet>();
+        List<Contentlet> contentletsVersion = new ArrayList<>();
         contentletsVersion.addAll(contentlets);
 
         if (perCons.size() != contentlets.size()) {
@@ -3185,7 +3190,7 @@ public class ESContentletAPIImpl implements ContentletAPI {
                             respectFrontendRoles));
         }
 
-        List<String> contentletInodes = new ArrayList<String>();
+        List<String> contentletInodes = new ArrayList<>();
         for (Iterator<Contentlet> iter = contentletsVersion.iterator(); iter.hasNext(); ) {
             Contentlet element = iter.next();
             contentletInodes.add(element.getInode());
@@ -3246,7 +3251,7 @@ public class ESContentletAPIImpl implements ContentletAPI {
         }
         List<Contentlet> perCons = permissionAPI.filterCollection(contentlets,
                 PermissionAPI.PERMISSION_PUBLISH, respectFrontendRoles, user);
-        List<Contentlet> contentletsVersion = new ArrayList<Contentlet>();
+        List<Contentlet> contentletsVersion = new ArrayList<>();
         contentletsVersion.addAll(contentlets);
 
         if (perCons.size() != contentlets.size()) {
@@ -3264,7 +3269,7 @@ public class ESContentletAPIImpl implements ContentletAPI {
 
         }
 
-        List<String> contentletInodes = new ArrayList<String>();
+        List<String> contentletInodes = new ArrayList<>();
         for (Iterator<Contentlet> iter = contentletsVersion.iterator(); iter.hasNext(); ) {
             Contentlet element = iter.next();
             contentletInodes.add(element.getInode());
@@ -3298,7 +3303,7 @@ public class ESContentletAPIImpl implements ContentletAPI {
                     + " does not have permission to delete some or all of the contentlets");
         }
 
-        ArrayList<Contentlet> contentlets = new ArrayList<Contentlet>();
+        ArrayList<Contentlet> contentlets = new ArrayList<>();
         contentlets.add(contentlet);
         contentFactory.deleteVersion(contentlet);
 
@@ -6592,7 +6597,7 @@ public class ESContentletAPIImpl implements ContentletAPI {
     public List<Contentlet> checkout(List<Contentlet> contentlets, User user,
             boolean respectFrontendRoles)
             throws DotDataException, DotSecurityException, DotContentletStateException {
-        List<Contentlet> result = new ArrayList<Contentlet>();
+        List<Contentlet> result = new ArrayList<>();
         for (Contentlet contentlet : contentlets) {
             result.add(checkout(contentlet.getInode(), user, respectFrontendRoles));
         }
@@ -6604,7 +6609,7 @@ public class ESContentletAPIImpl implements ContentletAPI {
     public List<Contentlet> checkoutWithQuery(String luceneQuery, User user,
             boolean respectFrontendRoles)
             throws DotDataException, DotSecurityException, DotContentletStateException {
-        List<Contentlet> result = new ArrayList<Contentlet>();
+        List<Contentlet> result = new ArrayList<>();
         List<Contentlet> cons = search(luceneQuery, 0, -1, "", user, respectFrontendRoles);
         for (Contentlet contentlet : cons) {
             result.add(checkout(contentlet.getInode(), user, respectFrontendRoles));
@@ -6617,7 +6622,7 @@ public class ESContentletAPIImpl implements ContentletAPI {
     public List<Contentlet> checkout(String luceneQuery, User user, boolean respectFrontendRoles,
             int offset, int limit)
             throws DotDataException, DotSecurityException, DotContentletStateException {
-        List<Contentlet> result = new ArrayList<Contentlet>();
+        List<Contentlet> result = new ArrayList<>();
         List<Contentlet> cons = search(luceneQuery, limit, offset, "", user, respectFrontendRoles);
         for (Contentlet contentlet : cons) {
             result.add(checkout(contentlet.getInode(), user, respectFrontendRoles));
@@ -6899,7 +6904,7 @@ public class ESContentletAPIImpl implements ContentletAPI {
             throws DotSecurityException, DotDataException, DotStateException {
         List<Contentlet> contentlets = contentFactory.findAllUserVersions(identifier);
         if (contentlets.isEmpty()) {
-            return new ArrayList<Contentlet>();
+            return new ArrayList<>();
         }
         if (!permissionAPI.doesUserHavePermission(contentlets.get(0), PermissionAPI.PERMISSION_READ,
                 user, respectFrontendRoles)) {
@@ -6946,7 +6951,7 @@ public class ESContentletAPIImpl implements ContentletAPI {
             throws DotSecurityException, DotDataException, DotStateException {
         List<Contentlet> contentlets = contentFactory.findAllVersions(identifier, bringOldVersions);
         if (contentlets.isEmpty()) {
-            return new ArrayList<Contentlet>();
+            return new ArrayList<>();
         }
         if (!permissionAPI.doesUserHavePermission(contentlets.get(0), PermissionAPI.PERMISSION_READ,
                 user, respectFrontendRoles)) {
@@ -7009,8 +7014,8 @@ public class ESContentletAPIImpl implements ContentletAPI {
             return;
         }
         List<Field> fields = FieldsCache.getFieldsByStructureInode(contentlet.getStructureInode());
-        List<String> fieldNames = new ArrayList<String>();
-        Map<String, Field> velFieldmap = new HashMap<String, Field>();
+        List<String> fieldNames = new ArrayList<>();
+        Map<String, Field> velFieldmap = new HashMap<>();
 
         for (Field field : fields) {
             if (!field.getFieldType().equals(Field.FieldType.LINE_DIVIDER.toString())
@@ -7185,7 +7190,7 @@ public class ESContentletAPIImpl implements ContentletAPI {
     public List<Contentlet> find(Category category, long languageId, boolean live, String orderBy,
             User user, boolean respectFrontendRoles)
             throws DotDataException, DotContentletStateException, DotSecurityException {
-        List<Category> cats = new ArrayList<Category>();
+        List<Category> cats = new ArrayList<>();
         return find(cats, languageId, live, orderBy, user, respectFrontendRoles);
     }
 
@@ -7194,7 +7199,7 @@ public class ESContentletAPIImpl implements ContentletAPI {
             String orderBy, User user, boolean respectFrontendRoles)
             throws DotDataException, DotContentletStateException, DotSecurityException {
         if (categories == null || categories.size() < 1) {
-            return new ArrayList<Contentlet>();
+            return new ArrayList<>();
         }
         StringBuffer buffy = new StringBuffer();
         buffy.append("+type:content +deleted:false");
@@ -7305,7 +7310,7 @@ public class ESContentletAPIImpl implements ContentletAPI {
             } else if (value instanceof String) {
                 try {
                     contentlet.setFloatProperty(field.getVelocityVarName(),
-                            new Float((String) value));
+                            Float.valueOf((String)value));
                 } catch (Exception e) {
                     if (value != null && value.toString().length() != 0) {
                         contentlet.getMap().put(field.getVelocityVarName(), (String) value);
@@ -7320,7 +7325,7 @@ public class ESContentletAPIImpl implements ContentletAPI {
             } else if (value instanceof String) {
                 try {
                     contentlet.setLongProperty(field.getVelocityVarName(),
-                            new Long((String) value));
+                            Long.valueOf((String)value));
                 } catch (Exception e) {
                     //If we throw this exception here.. the contentlet will never get to the validateContentlet Method
                     throw new DotContentletStateException("Unable to set string value as a Long");
@@ -8142,7 +8147,7 @@ public class ESContentletAPIImpl implements ContentletAPI {
         Structure st = CacheLocator.getContentTypeCache()
                 .getStructureByInode(contentlet.getStructureInode());
         ContentletRelationships relationshipsData = new ContentletRelationships(contentlet);
-        List<ContentletRelationshipRecords> relationshipsRecords = new ArrayList<ContentletRelationshipRecords>();
+        List<ContentletRelationshipRecords> relationshipsRecords = new ArrayList<>();
         relationshipsData.setRelationshipsRecords(relationshipsRecords);
         for (Entry<Relationship, List<Contentlet>> relEntry : contentRelationships.entrySet()) {
             Relationship relationship = relEntry.getKey();
@@ -8527,7 +8532,7 @@ public class ESContentletAPIImpl implements ContentletAPI {
     private Contentlet findWorkingContentlet(Contentlet content)
             throws DotSecurityException, DotDataException, DotContentletStateException {
         Contentlet con = null;
-        List<Contentlet> workingCons = new ArrayList<Contentlet>();
+        List<Contentlet> workingCons = new ArrayList<>();
         if (InodeUtils.isSet(content.getIdentifier())) {
             workingCons = contentFactory.findContentletsByIdentifier(content.getIdentifier(), false,
                     content.getLanguageId());
@@ -8587,12 +8592,12 @@ public class ESContentletAPIImpl implements ContentletAPI {
     @Override
     public List<String> findFieldValues(String structureInode, Field field, User user,
             boolean respectFrontEndRoles) throws DotDataException {
-        List<String> result = new ArrayList<String>();
+        List<String> result = new ArrayList<>();
 
         List<Contentlet> contentlets;
         if (field.isIndexed()) {
-            contentlets = new ArrayList<Contentlet>();
-            List<Contentlet> tempContentlets = new ArrayList<Contentlet>();
+            contentlets = new ArrayList<>();
+            List<Contentlet> tempContentlets = new ArrayList<>();
             int limit = 500;
 
             StringBuilder query = new StringBuilder(
@@ -8660,7 +8665,8 @@ public class ESContentletAPIImpl implements ContentletAPI {
      * @param field
      */
     private void deleteBinaryFiles(List<Contentlet> contentlets, Field field) {
-        contentlets.stream().forEach(con -> {
+        this.destroyMetadata(contentlets);
+        contentlets.forEach(con -> {
 
             String contentletAssetPath = getContentletAssetPath(con, field);
             String contentletAssetCachePath = getContentletCacheAssetPath(con, field);
@@ -8828,7 +8834,7 @@ public class ESContentletAPIImpl implements ContentletAPI {
         if (fields == null || fields.size() < 1) {
             throw new ValidationException("No Fields found for Content");
         }
-        Map<String, String> dbColToObjectAttribute = new HashMap<String, String>();
+        Map<String, String> dbColToObjectAttribute = new HashMap<>();
         for (com.dotcms.contenttype.model.field.Field field : fields) {
             dbColToObjectAttribute.put(field.dbColumn(), field.variable());
         }
@@ -8846,7 +8852,7 @@ public class ESContentletAPIImpl implements ContentletAPI {
                 query.getSelectAttributes().add(title);
             }
         } else {
-            List<String> atts = new ArrayList<String>();
+            List<String> atts = new ArrayList<>();
             atts.add("*");
             atts.add(title);
             query.setSelectAttributes(atts);
@@ -9508,17 +9514,17 @@ public class ESContentletAPIImpl implements ContentletAPI {
         contentFactory.updateUserReferences(userToReplace, replacementUserId, user);
     }
 
+    static final String CONTENTLET_URL_MAP_FOR_CONTENT_404 = "URL_MAP_FOR_CONTENT_404";
+
     @CloseDBIfOpened
     @Override
     public String getUrlMapForContentlet(Contentlet contentlet, User user,
             boolean respectFrontendRoles) throws DotSecurityException, DotDataException {
         // no structure, no inode, no workee
-        if (!InodeUtils.isSet(contentlet.getInode()) || !InodeUtils.isSet(
-                contentlet.getStructureInode())) {
+        if (UtilMethods.isEmpty(()->contentlet.getInode())) {//NOSONAR
             return null;
         }
 
-        final String CONTENTLET_URL_MAP_FOR_CONTENT_404 = "URL_MAP_FOR_CONTENT_404";
         String result = (String) contentlet.getMap().get(URL_MAP_FOR_CONTENT_KEY);
         if (result != null) {
             if (CONTENTLET_URL_MAP_FOR_CONTENT_404.equals(result)) {
@@ -9528,9 +9534,8 @@ public class ESContentletAPIImpl implements ContentletAPI {
         }
 
         // if there is no detail page, return
-        Structure structure = CacheLocator.getContentTypeCache()
-                .getStructureByInode(contentlet.getStructureInode());
-        if (!UtilMethods.isSet(structure.getDetailPage())) {
+        ContentType type = Try.of(contentlet::getContentType).getOrNull();
+        if (UtilMethods.isEmpty(() -> type.detailPage())) { //NOSONAR
             return null;
         }
 
@@ -9538,11 +9543,11 @@ public class ESContentletAPIImpl implements ContentletAPI {
         Host host = APILocator.getHostAPI().find(id.getHostId(), user, respectFrontendRoles);
 
         // URL MAPPed
-        if (UtilMethods.isSet(structure.getUrlMapPattern())) {
-            List<RegExMatch> matches = RegEX.find(structure.getUrlMapPattern(), "({[^{}]+})");
+        if (UtilMethods.isSet(type.urlMapPattern())) {
+            List<RegExMatch> matches = RegEX.find(type.urlMapPattern(), "({[^{}]+})");
             String urlMapField;
             String urlMapFieldValue;
-            result = structure.getUrlMapPattern();
+            result = type.urlMapPattern();
             for (RegExMatch match : matches) {
                 urlMapField = match.getMatch();
                 urlMapFieldValue = contentlet.getStringProperty(
@@ -9555,17 +9560,24 @@ public class ESContentletAPIImpl implements ContentletAPI {
                 if (UtilMethods.isSet(urlMapFieldValue)) {
                     result = result.replaceAll(urlMapField, urlMapFieldValue);
                 } else {
-                    result = result.replaceAll(urlMapField, "");
+                    // urlmap property not found on content
+                    result = null;
+                    break;
                 }
             }
         }
 
         // or Detail page with id=uuid
         else {
-            IHTMLPage p = loadPageByIdentifier(structure.getDetailPage(), false, user,
-                    respectFrontendRoles);
-            if (p != null && UtilMethods.isSet(p.getIdentifier())) {
-                result = p.getURI() + "?id=" + contentlet.getInode();
+            final Identifier detailPageId = APILocator.getIdentifierAPI().find(type.detailPage());
+            if (UtilMethods.isEmpty(() -> detailPageId.getPath())) { //NOSONAR
+                contentlet.setStringProperty(URL_MAP_FOR_CONTENT_KEY, CONTENTLET_URL_MAP_FOR_CONTENT_404);
+                return null;
+            }
+
+
+            if (UtilMethods.isSet(() -> detailPageId.getId())) { //NOSONAR
+                result = detailPageId.getPath() + "?id=" + contentlet.getInode();
             }
         }
 
@@ -9578,10 +9590,11 @@ public class ESContentletAPIImpl implements ContentletAPI {
             }
         }
 
-        if (result == null) {
-            result = CONTENTLET_URL_MAP_FOR_CONTENT_404;
+        if (UtilMethods.isEmpty( result )) {
+            contentlet.setStringProperty(URL_MAP_FOR_CONTENT_KEY, CONTENTLET_URL_MAP_FOR_CONTENT_404);
+        }else {
+            contentlet.setStringProperty(URL_MAP_FOR_CONTENT_KEY, result);
         }
-        contentlet.setStringProperty(URL_MAP_FOR_CONTENT_KEY, result);
         return result;
     }
 
@@ -9785,7 +9798,7 @@ public class ESContentletAPIImpl implements ContentletAPI {
     public long indexCount(String luceneQuery, User user, boolean respectFrontendRoles)
             throws DotDataException, DotSecurityException {
         boolean isAdmin = false;
-        List<Role> roles = new ArrayList<Role>();
+        List<Role> roles = new ArrayList<>();
         if (user == null && !respectFrontendRoles) {
             throw new DotSecurityException(
                     "You must specify a user if you are not respecting frontend roles");
@@ -9819,7 +9832,7 @@ public class ESContentletAPIImpl implements ContentletAPI {
                 "MM/dd/yyyy",
                 "hh:mm:ss aa", "HH:mm:ss", "yyyy-MM-dd"};
 
-        List<Map<String, String>> result = new ArrayList<Map<String, String>>();
+        List<Map<String, String>> result = new ArrayList<>();
 
         String structureInode = CacheLocator.getContentTypeCache()
                 .getStructureByVelocityVarName(structureVariableName).getInode();
